Fixing the list article spacing when large numbers are used.

--- a/source/css/objects/_article.scss
+++ b/source/css/objects/_article.scss
@@ -6,10 +6,9 @@
  * Article Header
  */
 .article-header {
-	margin-bottom: $space;
+	margin-bottom: $space-double;
 	position: relative;
 	&.center {
-		margin-bottom: $space-double;
 		.kicker {
 			margin-bottom: $space;
 		}
