--- a/source/css/objects/_blocks.scss
+++ b/source/css/objects/_blocks.scss
@@ -176,7 +176,7 @@
     margin-bottom: 0;
   }
   .b-thumb {
-    margin-bottom: rem(10);
+    margin-bottom: rem(30);
     text-align: center;
     @include mq($micro-break) {
       width: 50%;
