--- a/source/css/objects/_text.scss
+++ b/source/css/objects/_text.scss
@@ -99,8 +99,8 @@
 	display: table-cell;
 	vertical-align: middle;
 	width: rem(80);
-	max-width: rem(80);
-	min-width: rem(80); // min and max are for when using flexbox
+	//max-width: rem(80);
+	//min-width: rem(80); // min and max are for when using flexbox
 	font-family: $font-secondary;
 	padding-top: rem(4);
 	&.double-digit {
@@ -227,7 +227,7 @@
 	color: $gray-med;
 	font-size: rem(12);
 	line-height: 1;
-	padding-top: rem(2);
+	padding-top: rem(4);
 }
 
 // Uppercase Text
